<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLogoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="start"
                android:text="@string/app_name"
                android:textAlignment="viewStart"
                android:textColor="@color/navyAppBlue"
                android:textDirection="locale"
                android:textSize="21sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLogoutMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="25dp"
                android:gravity="start"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAppBlue"
                android:textDirection="locale"
                android:textSize="19sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnClose"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button0_bg"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:shadowColor="@color/white"
                    android:textColor="@color/colorAppBlue"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogout"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/logout_btn_bg"
                    android:gravity="center"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>